--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,24 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
+detekt {
+    version = "1.0.0-RC14"
+    input = files("${project.rootDir}/${project.getName()}/src/main/java")
+    config = files("${project.rootDir}/configs/detekt-config.yml")
+    filters = ".*test.*,.*/resources/.*,.*/tmp/.*"
+    reports {
+        xml {
+            enabled = true
+            destination = file("build/reports/detekt.xml")
+        }
+        html {
+            enabled = true
+            destination = file("build/reports/detekt.html")
+        }
+    }
+}
 
 android {
     compileSdkVersion 28
@@ -20,14 +36,65 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
+    androidExtensions { experimental = true }
+}
+
+ext {
+    room = "1.1.1"
+    retrofit = "2.5.0"
+    support_library = "28.0.0"
+    paging_library = "1.0.1"
+    mockito = "2.25.1"
+    powermock = "2.0.0"
 }
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation "com.android.support:appcompat-v7:$support_library"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    //Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.21"
+
+    //Views
+    implementation "com.android.support:recyclerview-v7:$support_library"
+    implementation "com.android.support:cardview-v7:$support_library"
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
+
+    //Rx
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+
+    //Paging Library
+    implementation "android.arch.paging:runtime:$paging_library"
+
+    //Room
+    kapt "android.arch.persistence.room:compiler:$room"
+    annotationProcessor "android.arch.persistence.room:compiler:$room"
+    implementation "android.arch.persistence.room:runtime:$room"
+    implementation "android.arch.persistence.room:rxjava2:$room"
+
     testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:$mockito"
+    testImplementation "org.powermock:powermock-api-mockito2:$powermock"
+    testImplementation "org.powermock:powermock-module-junit4:$powermock"
+    testImplementation "org.powermock:powermock-module-junit4-rule:$powermock"
+    testImplementation "org.powermock:powermock-classloading-xstream:$powermock"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+}
+
+repositories {
+    mavenCentral()
 }
