--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
     compileOptions {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
@@ -44,23 +47,32 @@ android {
 }
 
 ext {
+    mvvm = "0.4"
     room = "1.1.1"
     retrofit = "2.5.0"
+    rxkotlin = "2.3.0"
+    rxjava = "2.2.3"
+    rxandroid = "2.1.0"
     support_library = "28.0.0"
     paging_library = "1.0.1"
-    mockito = "2.25.1"
-    powermock = "2.0.0"
+    junit = "4.12"
+    dagger = "2.22.1"
+    parceler = "1.1.12"
+    circle_image_view = "3.0.0"
+    picasso = "2.71828"
 }
 
 dependencies {
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:support-v4:$support_library"
+    implementation "com.android.support:support-v13:$support_library"
     implementation "com.android.support:appcompat-v7:$support_library"
+    implementation "com.android.support:design:$support_library"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     //Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.21"
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.21'
 
     //Views
     implementation "com.android.support:recyclerview-v7:$support_library"
@@ -72,25 +84,37 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
 
     //Rx
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlin"
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid"
 
     //Paging Library
     implementation "android.arch.paging:runtime:$paging_library"
 
     //Room
     kapt "android.arch.persistence.room:compiler:$room"
-    annotationProcessor "android.arch.persistence.room:compiler:$room"
     implementation "android.arch.persistence.room:runtime:$room"
     implementation "android.arch.persistence.room:rxjava2:$room"
 
-    testImplementation 'junit:junit:4.12'
-    testImplementation "org.mockito:mockito-core:$mockito"
-    testImplementation "org.powermock:powermock-api-mockito2:$powermock"
-    testImplementation "org.powermock:powermock-module-junit4:$powermock"
-    testImplementation "org.powermock:powermock-module-junit4-rule:$powermock"
-    testImplementation "org.powermock:powermock-classloading-xstream:$powermock"
+    //Android MVVM Helper
+    implementation "com.github.stfalcon:androidmvvmhelper:$mvvm"
+
+    //Dagger 2
+    kapt "com.google.dagger:dagger-compiler:$dagger"
+    implementation "com.google.dagger:dagger:$dagger"
+
+    //Parceler
+    kapt "org.parceler:parceler:$parceler"
+    implementation "org.parceler:parceler-api:$parceler"
+
+    //Circle Image View
+    implementation "de.hdodenhof:circleimageview:$circle_image_view"
+
+    //Picasso
+    implementation "com.squareup.picasso:picasso:$picasso"
+
+    //JUnit
+    testImplementation "junit:junit:$junit"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
